<resources>
    <string name="app_name">London Guide</string>
    <string name="hidden_attractions">Hidden Attractions</string>
    <string name="free_london">Experience London 4free</string>
    <string name="chillax">Chillax</string>
    <string name="markets">Best Markets in town</string>
    <string name="bottom_tag">Immerse yourself in London!</string>
    <string name="choir_desc">Evensong’ takes place every evening at 5.30pm you won’t have to pay anything.</string>
    <string name="brick_lane_desc">There\'s bric-a-brac, second-hand furniture, vintage clothes, shoes and lots more!</string>
    <string name="portobello_road">Portobello Road</string>
    <string name="camden_desc">You\'ll find huge range of goods from designer clothes, to one-off pieces of art, food and furnishings.</string>
    <string name="camden">Camden Lock</string>
    <string name="brick_lane">Brick Lane</string>
    <string name="portobello_desc">In the very same place since the 1800s, became particularly famous for its antiques in the 1950s.</string>
    <string name="spitalfields_desc">Very popular covered market selling everything from clothes to food to artwork.</string>
    <string name="spitalfields">Old Spitalfields</string>
    <string name="greenwich_desc">Greenwich Market has beautiful products from designer makers and small cottage industries.</string>
    <string name="greenwich">Greenwich</string>
    <string name="coven_desc"><![CDATA[Full of shops, restaurants and cafes. You\'ll come across street performers, gorgeous craft, antiques & jewellery.]]></string>
    <string name="coven">Coven Garden</string>
    <string name="alfies_desc">Come for antique and vintage clothes, collectables and 20th-century design pieces.</string>
    <string name="alfies">Alfies Antique</string>
    <string name="choir">Choir in Westminster Abbey</string>
    <string name="theatre">National Theatre</string>
    <string name="theatre_desc">London’s National Theatre on Southbank has plenty of free concerts Mon-Sat.</string>
    <string name="comedy_desc">The Camden Head in Angel, which puts on free comedy nights upstairs every day of the week.</string>
    <string name="comedy">Comedy Night</string>
    <string name="show_desc">All you have to do is visit TVrecordings.com or BBC Shows to see what’s available.</string>
    <string name="show">Recording of a TV Show</string>
    <string name="rhythm_desc">Free shows during the week, impossibly cool Indie bands in leg hugging jeans.</string>
    <string name="rhythm">Shoreditch’s Rhythm Factory</string>
    <string name="dj_desc">You can see them for free in different bars around the East End.</string>
    <string name="dj">DJs in the East End</string>
    <string name="corner_desc">Hear people speak their mind at Speakers’ Corner</string>
    <string name="corner">Speakers’ Corner</string>
    <string name="bank_desc">In Bank of England you can take a grip and try to lift a golden bar.</string>
    <string name="bank">Bank of England</string>
    <string name="beefeaters_desc">Pop in and try 1485 Craft Lager made specifically for them.</string>
    <string name="beefeaters">The secret Beefeaters’ pub</string>
    <string name="harry_potter">Harry Potter spiders</string>
    <string name="harry_potter_desc">See the giant spiders from ‘Harry Potter and the Chamber of Secrets’.</string>
    <string name="venice_desc">Have you ever cruise down in The Floating City of love and bridges?</string>
    <string name="venice">Little Venice</string>
    <string name="windmill_desc">Amazing Dutch architecture in a flower-filled field zone 2!</string>
    <string name="windmill">Brixton Windmill</string>
    <string name="temple">Shri Vallabh Nidh</string>
    <string name="temple_desc">Do you want to see the biggest white temple built outside of India?</string>
    <string name="church_desc">A slice of St Petersburg in west London. Services are mostly held in Slavonic.</string>
    <string name="church">Russian Orthodox Church</string>
    <string name="richmond_desc">London\'s largest Site of Special Scientific Interest and a European Special Area of Conservation.</string>
    <string name="richmond">Richmond Park</string>
    <string name="isabella_desc">The rich reds, pinks and purples of blooming rhododendrons and azaleas you have to see.</string>
    <string name="isabella">Isabella Plantation</string>
    <string name="abney">Abney Park Cemetery</string>
    <string name="abney_desc">Creep through the overgrown woods of Abney Park Cemetery.</string>
    <string name="lavender_desc">If you can’t resist squeezing lavender then you will be in your element here.</string>
    <string name="lavender">Lavender Garden</string>
    <string name="hampstead">Hampstead Hill</string>
    <string name="hampstead_desc">Thousands wander across Hampstead Heath\'s wild and undulating parkland every year.</string>
    <string name="primrose_desc">You can save yourself the price of the London Eye by climbing to the top of Primrose Hill.</string>
    <string name="primrose">Primrose</string>
    <string name="kyoto_desc">A picturesque waterfall, rock pool, where koi carp dart beneath the surface and peacocks stalk past on the banks.</string>
    <string name="kyoto">Kyoto Garden</string>
</resources>
